--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/Frontend/dist/$1" }
+    { "src": "/(.*)", "dest": "/Frontend/dist/index.html" }
   ]
 }
